# Aura

./: .gitignore  MIGRATION_COMPLETE.md  MIGRATION_LOG.md  MIGRATION_PLAN.md  README.md  SUPABASE_MIGRATION.md  conversation.md  docker-compose.local.yml  docker-compose.yml  manifesto.md  next-steps.md  trying-to-improve-agent1.md
docs/: DOCKER_GUIDE.md
my-react-app/: package.json
my_fastapi_app/app/: main.py
src/: state.py
src/client/: .dockerignore  .gitignore  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
src/server/: .dockerignore  .env.example  .env.migration.example  .gitignore  Dockerfile  alembic.ini  browser-use-test.py  check-limits.py  docker-compose.yml  justfile  pyproject.toml  requirements.txt
src/server/agents/: agents.py  aura_graph.py  auto_executor.py  orchestrator.py  prompts.py  researchers.py  router.py  state.py  trust.py  user_coordinator.py
src/server/alembic/: README.md  env.py
src/server/alembic/versions/: 001_initial_schema.py  770d3084524c_add_wallet_checkout_transaction_tables.py  add_pgvector_and_embeddings.py  add_pgvector_and_embeddings.py.bak  ea01b2a8021f_initial_migration_create_all_tables.py.bak  enable_pgvector_extension.sql
src/server/db/: __init__.py  models.py  schemas.py
src/server/my_fastapi_app/app/: config.py  main.py  settings.py  state.py
src/server/my_fastapi_app/app/db/: session.py
src/server/my_fastapi_app/app/routes/: __init__.py  agents.py  blockchain.py  expenses.py  fx_routes.py  payments.py  users.py
src/server/my_fastapi_app/app/services/: fx_service.py  mail_service.py
src/server/scripts/: setup_issuer_account.py  test_fx_service.py  test_stellar_flow.py
src/server/tools/: __init__.py  circle_tools.py  embeddings.py  market_tools.py  stellar_tools.py
temp-docs/after/: CURRENT_STATE_AND_CONCERNS.md  PHASE_2.6_CONNECT_THE_GLUE_PLAN.md  PLAN_A_CONNECT_THE_GLUE.md  PLAN_A_IMPLEMENTATION_LOG.md  PLAN_B_AGENT_VISUALIZATION.md  PLAN_B_AGENT_VISUALIZATION_UPDATED.md
temp-docs/infra-enhancements/: IMPLEMENTATION_COMPLETE.md
temp-docs/stablecoins/: SETTLEMENT_FLOW_TEST_GUIDE.md  STABLECOIN_INTEGRATION_PLAN.md  STABLECOIN_INTEGRATION_PLAN_v3.md  STABLECOIN_INTEGRATION_PLAN_v4.md  STABLECOIN_INTEGRATION_PLAN_v4_LOG.md  TEST_PLAN_PHASE_1_2.md  (+1 more)
(+24 files in other folders)
